# clevr_robot_env

./: .gitignore  README.md  env.py  example.py  mujoco_env.py  pyproject.toml
assets/: clevr_default.xml  variable_input_vocab.txt
assets/pregenerated_data/: all_questions_variable_input.pkl  fixed_objective_more_goal.pkl  shape_only_questions.pkl
assets/textures/: README.md
clevr_robot_env/: __init__.py  env.py  mujoco_env.py
clevr_robot_env/assets/: test.xml  vocab.txt
clevr_robot_env/assets/pregenerated_data/: 10_fixed_objective.pkl  all_question.pkl  fixed_objective.pkl
clevr_robot_env/metadata/: metadata.json  variable_obj_meta_data.json
clevr_robot_env/templates/: shape_only.json  spatial_relation.json  variable_object.json  variable_object_2.json
clevr_robot_env/utils/: load_utils.py  xml_utils.py
templates/: even_question_distribution.json  even_question_distribution_minimal_instruction_set.json  strong_condition.json  zero_hop.json
utils/: load_utils.py  xml_utils.py
