[tool.poetry]
name = "clevr_robot_env"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
gym = "^0.21.0"
dm-control = "^0.0.403778684"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]
absl-py = "^0.15.0"
ipython = "^7.29.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
